# skilldeck

./: CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: adapters.md  authoring-skills.md
skills/security-review/: meta.yaml  skill.md
src/skilldeck/: __init__.py  cli.py  registry.py  targets.py
src/skilldeck/adapters/: __init__.py  base.py  claude.py
src/skillful/: __init__.py  cli.py  registry.py  targets.py
src/skillful/adapters/: __init__.py  base.py  claude.py  codex.py  kiro.py
src/skillful/skills/test-review/: meta.yaml  skill.md
tests/: test_adapters.py  test_cli.py  test_registry.py
