[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skilldeck"
version = "0.1.0"
description = "Agent-agnostic security & code-review skills for coding assistants"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
skilldeck = "skilldeck.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/skilldeck"]

[tool.pytest.ini_options]
testpaths = ["tests"]
